--- a/src/controls/filePicker/controls/FolderTile/FolderTile.module.scss
+++ b/src/controls/filePicker/controls/FolderTile/FolderTile.module.scss
@@ -77,7 +77,7 @@
   max-height: 100%;
   -webkit-box-shadow: 0 1px 3px 2px rgba(1, 1, 0, 0.2);
   box-shadow: 0 1px 3px 2px rgba(1, 1, 0, 0.2);
-  background-color: $ms-color-white;
+  background-color: "[theme:white, default:#{$ms-color-white}]";
   min-width: 32px;
   min-height: 32px;
 }
